// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> heading should default to H6 1`] = `
<div>
  <h6 />
</div>
`;

exports[`<Title /> should render a H{x} whose {x} is headingLevel + 2 1`] = `
<div>
  <h4 />
</div>
`;
